# PhishLab

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
apps/api/: Dockerfile  pyproject.toml
apps/api/phishlab_api/: config.py  database.py  dependencies.py  main.py
apps/api/phishlab_api/routes/: analysis.py  reports.py  training.py
apps/dashboard/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo
apps/dashboard/src/: App.tsx  index.css
apps/dashboard/src/api/: client.ts
apps/dashboard/src/components/: FileUpload.tsx  FindingsTable.tsx  Layout.tsx  RiskBadge.tsx  RiskGauge.tsx  (+1 more)
docs/: architecture.md  docker-setup.md  email-analysis-model.md  portfolio-pitch.md  scoring.md  security-notes.md  threat-model.md  training-mode.md
examples/emails/: bank-phish-polish.eml  benign-newsletter.eml  fake-microsoft-alert.eml  gift-card-scam.eml  invoice-phish.eml  password-reset-legit.eml  shipping-notification-phish.eml  training_samples.yml
rules/: brands.yml  content_patterns.yml  link_shorteners.yml  suspicious_extensions.yml
tests/: conftest.py  test_api.py  test_attachment_analyzer.py  test_auth_analyzer.py  test_cli.py  test_content_analyzer.py  test_domain_analyzer.py  test_header_analyzer.py  test_integrations.py  test_link_analyzer.py  test_orchestrator.py  test_parser.py  test_reports.py  test_scoring.py  test_training.py
tests/fixtures/: malformed.eml  missing_headers.eml  multipart.eml  phishing_links.eml  simple.eml  with_attachments.eml
(+7 files in other folders)
