[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phishlab-api"
version = "0.1.0"
description = "PhishLab REST API"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "python-multipart>=0.0.9",
    "aiosqlite>=0.20,<1.0",
    "phishlab>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["phishlab_api"]
